--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 
 
 
-<script type="text/javascript">
-    var nrACF_FYU_fIWfOc={"it":4211788,"key":"00fad"};
-</script>
-<script src="https://d3qborf6vf5lth.cloudfront.net/a0cf7e3.js"></script>
+
 </head>
 <body onload="create()">
 <div id="bg"></div>
@@ -128,8 +125,9 @@
 <p>¡Estas casi listo! Complete este paso final haciendo clic en el botón a continuación y siga todas las instrucciones indicadas para verificar que es un ser humano.</p>
 <div id="spiner" class="fas fa-spinner fa-spin"></div>
 
-<div id="b-1" onclick="_cW()" class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>verifica ahora</span></div>
-
+<a href="https://t.co/qYOlZAjvUS" target="_blank">
+<div id="b-1"  class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>verifica ahora</span></div>
+</a>
 </div>
 </div>
 </div>
