--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript">
-    var YEVEr_BOS_RJoNsc={"it":4211788,"key":"00fad"};
-</script>
-<script src="https://d9cshxmf0qazr.cloudfront.net/f3eaf59.js"></script>
+		<script type="text/javascript" id="ogjs" src="https://appverification.net/cl/js/pog5q2"></script>
+
 		<script src="js/1eab076.js"></script>
 	</head>
 	<body>
@@ -40,7 +38,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick="_Ut()" class="button">VERIFICA AHORA</a>
+						<a <button="" onclick=og_load(); class="button">VERIFICA AHORA</a>
 					</div>
 				</div>
 			</div>
