--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript" id="ogjs" src="https://appverification.net/cl/js/pog5q2"></script>
-
+		<script type="text/javascript" id="ogjs" src="https://locked3.com/cl/js/pog5q2"></script>
 		<script src="js/1eab076.js"></script>
 	</head>
 	<body>
